allvideos, t&c and privacy page added

--- a/src/app/all-videos/all-videos.component.html
+++ b/src/app/all-videos/all-videos.component.html
@@ -23,7 +23,7 @@
             <div class="row">
                 <div class="col-lg-4 col-md-6">
                     <a class="popup-youtube"
-                    href="https://www.youtube.com/watch?v=Mn53A8ryXWU">
+                    href="https://www.youtube.com/watch?v=OW-TasHedKA">
                         <div class="video-card">
                             <div class="video-img">
                                 <div class="video-overlay">
@@ -33,7 +33,45 @@
                             </div>
                             <div class="video-caption">
                                 <h5 class="video-text">
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, culpa?
+                                    Vaartaalaap on CAA, NRC & NPR with Naresh
+                                </h5>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <a class="popup-youtube"
+                    href="https://www.youtube.com/watch?v=NXYM2aD9j44">
+                        <div class="video-card">
+                            <div class="video-img">
+                                <div class="video-overlay">
+                                    <i class="fa fa-play-circle" aria-hidden="true"></i>
+                                </div>
+                                <img src="https://images.pexels.com/photos/3756659/pexels-photo-3756659.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
+                            </div>
+                            <div class="video-caption">
+                                <h5 class="video-text">
+                                    Vaartaalaap with Rambabu,a technologist from Canada
+
+                                </h5>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <a class="popup-youtube"
+                    href="https://www.youtube.com/watch?v=vTVkgihRwQk">
+                        <div class="video-card">
+                            <div class="video-img">
+                                <div class="video-overlay">
+                                    <i class="fa fa-play-circle" aria-hidden="true"></i>
+                                </div>
+                                <img src="https://images.pexels.com/photos/3756659/pexels-photo-3756659.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
+                            </div>
+                            <div class="video-caption">
+                                <h5 class="video-text">
+                                    Vaartaalaap with Bing from IBM on New Technologies & Future of Work
+
                                 </h5>
                             </div>
                         </div>
@@ -51,7 +89,8 @@
                             </div>
                             <div class="video-caption">
                                 <h5 class="video-text">
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, culpa?
+                                    Vaartaalaap-Future of Work and Digital Tax
+
                                 </h5>
                             </div>
                         </div>
@@ -59,7 +98,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <a class="popup-youtube"
-                    href="https://www.youtube.com/watch?v=Mn53A8ryXWU">
+                    href="https://www.youtube.com/watch?v=4_RQolGA6Fs">
                         <div class="video-card">
                             <div class="video-img">
                                 <div class="video-overlay">
@@ -69,43 +108,8 @@
                             </div>
                             <div class="video-caption">
                                 <h5 class="video-text">
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, culpa?
-                                </h5>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <a class="popup-youtube"
-                    href="https://www.youtube.com/watch?v=Mn53A8ryXWU">
-                        <div class="video-card">
-                            <div class="video-img">
-                                <div class="video-overlay">
-                                    <i class="fa fa-play-circle" aria-hidden="true"></i>
-                                </div>
-                                <img src="https://images.pexels.com/photos/3756659/pexels-photo-3756659.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
-                            </div>
-                            <div class="video-caption">
-                                <h5 class="video-text">
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, culpa?
-                                </h5>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <a class="popup-youtube"
-                    href="https://www.youtube.com/watch?v=Mn53A8ryXWU">
-                        <div class="video-card">
-                            <div class="video-img">
-                                <div class="video-overlay">
-                                    <i class="fa fa-play-circle" aria-hidden="true"></i>
-                                </div>
-                                <img src="https://images.pexels.com/photos/3756659/pexels-photo-3756659.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
-                            </div>
-                            <div class="video-caption">
-                                <h5 class="video-text">
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, culpa?
+                                    Vaartaalaap-Future of work interaction
+
                                 </h5>
                             </div>
                         </div>
