--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -18,12 +18,12 @@
                         <ul class="list-unstyled li-space-lg">
                             <li class="media">
                               
-                                <div class="media-body"> <a class="turquoise" href="#your-link">Terms and Conditions</a></div>
+                                <div class="media-body"> <a class="turquoise" routerLink="/terms-and-conditions">Terms and Conditions</a></div>
                             </li>
                             <li class="media">
                                 
 
-                                <div class="media-body"><a class="turquoise" href="privacy-policy.html">Privacy Policy</a></div>
+                                <div class="media-body"><a class="turquoise" routerLink="/policy">Privacy Policy</a></div>
                             </li>
                         </ul>
                     </div>
