--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1503,7 +1503,7 @@ a:hover.back-to-top {
 .ex-header {
 	padding-top: 8rem;
 	padding-bottom: 5rem;
-	background: linear-gradient(to bottom right, #2c1a7e, #5557db);
+	background: linear-gradient(to bottom, #fff, #fff7f7);
 	text-align: center;
 }
 
@@ -1523,9 +1523,10 @@ a:hover.back-to-top {
 }
 
 .ex-basic-2 {
-	padding-top: 4.75rem;
-	padding-bottom: 4rem;
-	background-color: #262431;
+	padding-top: 0rem;
+	position: relative;
+	padding-bottom: 3rem;
+	background: linear-gradient(to bottom, #fff7f7, #f7fbff);
 }
 
 .ex-basic-2 h3 {
@@ -2160,3 +2161,73 @@ a:hover.back-to-top {
 	/* end of extra pages */
 }
 /* end of min-width width 1200px */
+
+.heading{
+    font-size: 2.5rem;
+    font-weight: 800;
+    letter-spacing: -0.1rem;
+    position : relative;
+    display: inline-block;
+    z-index: 10;
+     margin-bottom: 1.5rem;
+}
+
+.heading::after{
+    content: "";
+    position: absolute;
+    left: 0px;
+    bottom: 0.5rem;
+    height: 1.2rem;
+    z-index: -1;
+    width: 100%;
+}
+.heading-red{
+    color: #EF9A9A;
+}
+.heading-red::after{
+    background-color: #727ec938;
+}
+
+.heading-blue{
+    color: #727ec9;
+}
+.heading-blue::after{
+    background-color: rgba(239, 154, 154, 0.473);
+}
+.heading-teal{
+    color: #80DEEA;
+}
+
+.vb{
+    position: absolute;
+    img{
+        width: 12vw;
+    }
+}
+.vb-1{
+    top: 25vh;
+    left: 4vw;
+}
+.vb-2{
+    top: 20vh;
+    left: auto;
+    right: 5vw;
+    img{
+        width: 10vw;
+    }
+}
+
+.vb-3{
+    bottom: 10vh;
+    left: auto;
+    right: 2vw;
+    img{
+        width: 15vw;
+    }
+}
+
+.vb-4{
+    bottom: 5vh;
+    left: 3vw;
+   
+}
